# darkwall-comfyui

./: .gitignore  NIXOS_INTEGRATION.md  QUESTIONNAIRE.md  README.md  TODO.md  flake.nix  pyproject.toml  pytest.ini  requirements.txt  result
.teams/: TEAM_001_theme_hierarchy.md  TEAM_002_workflow_system_refactor.md  TEAM_003_theme_scheduling.md  TEAM_004_polish_integration.md  TEAM_006_config_consolidation.md  TEAM_007_multi_prompt_system.md
config/: PROMPT_GUIDE.md  README.md  config.toml
config/atoms/: 2_environment.txt  3_lighting.txt  compositions.txt  moods.txt  subject.txt
config/prompts/: default.prompt
config/themes/dark/atoms/: artistic_figure.txt  artistic_mood.txt  artistic_style.txt  colors.txt  composition.txt  environment.txt  lighting.txt  mood.txt  style.txt  subject.txt
config/themes/dark/prompts/: artistic_boudoir.prompt  artistic_fantasy.prompt  artistic_nude.prompt  artistic_silhouette.prompt  cinematic.prompt  cosmic.prompt  cyberpunk.prompt  default.prompt  gothic.prompt  noir.prompt
config/themes/default/atoms/: colors.txt  style.txt
config/workflows/: qwen_t2i.json  uncannyvalley-1920x1080.json  uncannyvalley-2327x1309.json  wan2_5-1920x1080.json  wan2_5-2327x1309.json  z-image-turbo-1920x1080.json  z-image-turbo-2327x1309.json
docs/: README.md  configuration.md  contributing.md  darkwall.1.md  examples.md  troubleshooting.md  workflow-migration.md
docs/api/: README.md  config.md
docs/multi-prompt-design/: 00-overview.md  01-current-state.md  02-new-prompt-format.md  03-workflow-placeholders.md  04-prompt-result.md  05-implementation-plan.md  06-migration-guide.md  07-theme-config-migration.md
docs/requirements/: QUESTIONNAIRE.md  README.md  REQUIREMENTS.md  TRACEABILITY.md  UNCLEAR_BEHAVIORS.md
pkgs/: darkwall-comfyui.nix
scripts/: install-systemd.sh
src/darkwall_comfyui/: __init__.py  cli.py  comfy_client.py  config.py  exceptions.py  main.py  monitor_detection.py  notifications.py  prompt_generator.py  schedule.py  wallpaper_target.py
src/darkwall_comfyui/comfy/: __init__.py  client.py  injection.py  transport.py  workflow.py
src/darkwall_comfyui/commands/: __init__.py  gallery.py  generate.py  init.py  prompt.py  status.py
src/darkwall_comfyui/config/: __init__.py  dataclasses.py  main.py  state.py  validation.py
src/darkwall_comfyui/history/: __init__.py  exceptions.py  manager.py
src/darkwall_comfyui/wallpaper/: __init__.py  setters.py  target.py
systemd/: darkwall-comfyui.service  darkwall-comfyui.timer
tests/: __init__.py  conftest.py  test_client.py  test_consolidated_logic.py  test_dependency_injection.py  test_exception_handling.py  test_history.py  test_integration.py  test_prompt_generator.py  test_state_manager.py  test_workflow.py
tests/features/: cli_status.feature  config_breaking_changes.feature  config_initialization.feature  generation.feature  monitor_config.feature  monitor_detection.feature  prompt_generation.feature  scheduling.feature  theme_system.feature  workflow_system.feature
tests/step_definitions/: __init__.py  test_cli_status.py  test_config_breaking_changes.py  test_config_initialization.py  test_generation.py  test_monitor_config.py  test_monitor_detection.py  test_prompt_generation.py  test_scheduling.py  test_theme_system.py  test_workflow_system.py
(+32 files in other folders)
